# ethbit

./: .gitignore  README.md  config.ini  pyproject.toml
.ethbit/: config.toml
ethbit/: __init__.py  __main__.py  config.py  types.py  utils.py
ethbit/commands/: setup.py
ethbit/commands/balance/: __init__.py  btc.py  eth.py  utils.py
ethbit/commands/kraken/: __init__.py  balance.py  utils.py
ethbit/commands/transactions/: __init__.py  get_txn.py  models.py
